--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="preview">Prévia da Imagem</string>
     <string name="addLocation">Adicionar Localização</string>
     <string name="save">Salvar</string>
+    <string name="addPhoto">Adicionar Foto</string>
+    <string name="select_date">Selecionar Data</string>
+    <string name="date">Data</string>
+    <string name="viewMore">Ver mais</string>
 </resources>
